--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
         <div class="md:col-span-2">
           <label for="photo" class="block text-sm font-semibold text-gray-700 mb-2">Photo URL (optional)</label>
           <input id="photo" type="url" class="w-full px-4 py-3 border border-gray-300 rounded-lg" placeholder="https://i.imgur.com/example.jpg" />
+          <p class="text-xs text-gray-500 mt-1">Upload your photo to Imgur and copy the direct link.</p>
         </div>
         <div class="md:col-span-2">
           <label for="ending" class="block text-sm font-semibold text-gray-700 mb-2">Ending Message (optional)</label>
