--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
   <form id="revealForm" class="space-y-8">
     <!-- Section 1 -->
     <div class="bg-white rounded-2xl shadow-xl p-8" id="section1">
-      <h2 class="text-2xl font-bold mb-4" style="color:#1f2937;">Colors & Styling</h2>
+      <div class="flex items-center mb-6">
+        <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">1</div>
+        <h2 class="text-2xl font-bold text-gray-800">Colors & Styling</h2>
+      </div>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
         <div>
           <label for="backgroundTheme" class="block text-sm font-semibold text-gray-700 mb-2">Background Theme</label>
@@ -123,7 +126,10 @@
     </div>
     <!-- Section 2 -->
     <div class="bg-white rounded-2xl shadow-xl p-8" id="section2">
-      <h2 class="text-2xl font-bold mb-4" style="color:#1f2937;">Main Announcement</h2>
+      <div class="flex items-center mb-6">
+        <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">2</div>
+        <h2 class="text-2xl font-bold text-gray-800">Main Announcement</h2>
+      </div>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
         <div>
           <label for="mainHeadline" class="block text-sm font-semibold text-gray-700 mb-2">Main Headline</label>
@@ -140,7 +146,10 @@
     </div>
     <!-- Section 3 -->
     <div class="bg-white rounded-2xl shadow-xl p-8" id="section3">
-      <h2 class="text-2xl font-bold mb-4" style="color:#1f2937;">Additional Details</h2>
+      <div class="flex items-center mb-6">
+        <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">3</div>
+        <h2 class="text-2xl font-bold text-gray-800">Additional Details</h2>
+      </div>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
         <div>
           <label for="message1" class="block text-sm font-semibold text-gray-700 mb-2">Message 1</label>
