--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">1</div>
         <h2 class="text-2xl font-bold text-gray-800">Colors & Styling</h2>
       </div>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+        <div class="md:col-span-2 grid grid-cols-1 md:grid-cols-2 gap-8">
         <div>
           <label for="backgroundTheme" class="block text-sm font-semibold text-gray-700 mb-2">Background Theme</label>
           <select id="backgroundTheme" class="w-full px-4 py-3 border border-gray-300 rounded-lg mb-3" required>
@@ -114,9 +115,10 @@
           </select>
         </div>
       </div>
+      </div>
       <div class="hidden md:block mt-8">
         <h3 class="text-lg font-semibold text-gray-700 mb-2">Live Preview</h3>
-        <div id="previewBackground" class="h-40 flex items-center justify-center rounded-lg" style="background-color:#f3f3f3;">
+        <div id="previewBackground" class="flex items-center justify-center rounded-lg w-full" style="aspect-ratio:9/16;background-color:#f3f3f3;">
           <div id="previewText" class="text-center">
             <h1 id="previewMain" class="text-3xl font-bold">Your Text Here</h1>
             <p id="previewSub" class="text-lg">This will be the style for the reveal</p>
@@ -139,7 +141,7 @@
         </div>
         <div class="hidden md:block">
           <h3 class="text-lg font-semibold text-gray-700 mb-2">Live Preview — Page 1</h3>
-          <div id="preview1Background" class="h-32 flex items-center justify-center rounded-lg" style="background-color:#f3f3f3;">
+          <div id="preview1Background" class="flex items-center justify-center rounded-lg w-full" style="aspect-ratio:9/16;background-color:#f3f3f3;">
             <h1 id="preview1Text" class="text-4xl font-bold" style="display:none"></h1>
           </div>
         </div>
@@ -151,7 +153,8 @@
         <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">3</div>
         <h2 class="text-2xl font-bold text-gray-800">Additional Details</h2>
       </div>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+        <div class="md:col-span-2 grid grid-cols-1 md:grid-cols-2 gap-8">
         <div>
           <label for="message1" class="block text-sm font-semibold text-gray-700 mb-2">Message 1</label>
           <input id="message1" class="w-full px-4 py-3 border border-gray-300 rounded-lg" placeholder="Baby Johnson" required />
@@ -192,7 +195,7 @@
       </div>
       <div class="hidden md:block mt-8">
         <h3 class="text-lg font-semibold text-gray-700 mb-2">Live Preview — Page 2</h3>
-        <div id="preview2Background" class="h-64 flex items-center justify-center rounded-lg" style="background-color:#f3f3f3;">
+        <div id="preview2Background" class="flex items-center justify-center rounded-lg w-full" style="aspect-ratio:9/16;background-color:#f3f3f3;">
           <div id="preview2Text" class="text-center space-y-3">
             <h2 id="preview2Msg1" class="text-2xl font-bold" style="display:none"></h2>
             <p id="preview2Msg2" class="text-lg" style="display:none"></p>
