--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1 class="text-2xl font-bold mb-4" style="color:#1f2937;">Access Required</h1>
     <form id="passwordForm" class="space-y-4">
       <input id="passwordInput" type="password" placeholder="Enter code" class="w-full px-4 py-3 border border-gray-300 rounded-lg text-center font-mono text-lg tracking-wider" />
-      <button type="submit" class="w-full py-3 rounded-lg font-semibold" style="background-color:#c0dcca;color:#1f2937;" onmouseover="this.style.backgroundColor='#a8d0b5'" onmouseout="this.style.backgroundColor='#c0dcca'">Access Template</button>
+      <button type="submit" class="w-full py-3 rounded-lg font-semibold bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Access Template</button>
       <div id="passwordError" class="text-red-500 text-sm hidden">Incorrect code.</div>
     </form>
   </div>
@@ -207,18 +207,18 @@
     </div>
     <!-- Generate URL -->
     <div class="bg-white rounded-2xl shadow-xl p-8 text-center">
-      <button type="submit" class="w-full py-3 rounded-lg font-semibold" style="background-color:#c0dcca;color:#1f2937;" onmouseover="this.style.backgroundColor='#a8d0b5'" onmouseout="this.style.backgroundColor='#c0dcca'">Generate My Reveal URL</button>
+      <button type="submit" class="w-full py-3 rounded-lg font-semibold bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Generate My Reveal URL</button>
     </div>
   </form>
   <div id="urlResult" class="hidden bg-white rounded-2xl shadow-xl p-8 text-center">
     <h2 class="text-2xl font-bold mb-4" style="color:#1f2937;">Your Reveal URL is Ready!</h2>
     <div class="flex items-center mb-4">
       <input id="generatedUrl" readonly class="flex-1 px-3 py-2 border border-gray-300 rounded text-sm" />
-      <button id="copyBtn" class="ml-2 px-4 py-2 rounded" style="background-color:#c0dcca;color:#1f2937;" aria-live="polite" onmouseover="this.style.backgroundColor='#a8d0b5'" onmouseout="this.style.backgroundColor='#c0dcca'">Copy</button>
+      <button id="copyBtn" class="ml-2 px-4 py-2 rounded bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]" aria-live="polite">Copy</button>
     </div>
     <div id="statusMsg" class="text-sm text-gray-700 mb-3"></div>
-    <a id="previewLink" href="#" target="_blank" class="block text-center py-2 rounded mb-3" style="background-color:#c0dcca;color:#1f2937;" onmouseover="this.style.backgroundColor='#a8d0b5'" onmouseout="this.style.backgroundColor='#c0dcca'">Preview Page</a>
-    <button id="newBtn" class="w-full py-2 rounded" style="background-color:#c0dcca;color:#1f2937;" onmouseover="this.style.backgroundColor='#a8d0b5'" onmouseout="this.style.backgroundColor='#c0dcca'">Create Another</button>
+    <a id="previewLink" href="#" target="_blank" class="block text-center py-2 rounded mb-3 bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Preview Page</a>
+    <button id="newBtn" class="w-full py-2 rounded bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Create Another</button>
   </div>
 </div>
 <script>
