Shrink preview areas

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </div>
       <div class="hidden md:block mt-8">
         <h3 class="text-lg font-semibold text-gray-700 mb-2">Live Preview</h3>
-        <div id="previewBackground" class="flex items-center justify-center rounded-lg w-full" style="aspect-ratio:9/16;background-color:#f3f3f3;">
+        <div id="previewBackground" class="flex items-center justify-center rounded-lg w-24 mx-auto" style="aspect-ratio:9/16;background-color:#f3f3f3;">
           <div id="previewText" class="text-center">
             <h1 id="previewMain" class="text-3xl font-bold">Your Text Here</h1>
             <p id="previewSub" class="text-lg">This will be the style for the reveal</p>
@@ -141,7 +141,7 @@
         </div>
         <div class="hidden md:block">
           <h3 class="text-lg font-semibold text-gray-700 mb-2">Live Preview — Page 1</h3>
-          <div id="preview1Background" class="flex items-center justify-center rounded-lg w-full" style="aspect-ratio:9/16;background-color:#f3f3f3;">
+          <div id="preview1Background" class="flex items-center justify-center rounded-lg w-24 mx-auto" style="aspect-ratio:9/16;background-color:#f3f3f3;">
             <h1 id="preview1Text" class="text-4xl font-bold" style="display:none"></h1>
           </div>
         </div>
@@ -195,7 +195,7 @@
       </div>
       <div class="hidden md:block mt-8">
         <h3 class="text-lg font-semibold text-gray-700 mb-2">Live Preview — Page 2</h3>
-        <div id="preview2Background" class="flex items-center justify-center rounded-lg w-full" style="aspect-ratio:9/16;background-color:#f3f3f3;">
+        <div id="preview2Background" class="flex items-center justify-center rounded-lg w-24 mx-auto" style="aspect-ratio:9/16;background-color:#f3f3f3;">
           <div id="preview2Text" class="text-center space-y-3">
             <h2 id="preview2Msg1" class="text-2xl font-bold" style="display:none"></h2>
             <p id="preview2Msg2" class="text-lg" style="display:none"></p>
