Simplify first section to background color

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
     <div class="bg-white rounded-2xl shadow-xl p-8" id="section1">
       <div class="flex items-center mb-6">
         <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">1</div>
-        <h2 class="text-2xl font-bold text-gray-800">Colors & Style</h2>
+        <h2 class="text-2xl font-bold text-gray-800">Background Color</h2>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
         <div class="md:col-span-2 grid grid-cols-1 md:grid-cols-2 gap-8">
         <div>
-          <label for="backgroundTheme" class="block text-sm font-semibold text-gray-700 mb-2">Background Theme</label>
+          <label for="backgroundTheme" class="block text-sm font-semibold text-gray-700 mb-2">Background Color</label>
           <select id="backgroundTheme" class="w-full px-4 py-3 border border-gray-300 rounded-lg mb-3" required>
             <option value="">Choose a theme...</option>
             <option value="beige">Beige</option>
@@ -79,67 +79,6 @@
               <input type="text" id="backgroundHex" class="flex-1 px-4 py-3 border rounded-lg" pattern="^#([0-9A-Fa-f]{6})$" placeholder="#eedec5" />
             </div>
           </div>
-        </div>
-        <div>
-          <label for="textColor" class="block text-sm font-semibold text-gray-700 mb-2">Text Color</label>
-          <select id="textColor" class="w-full px-4 py-3 border border-gray-300 rounded-lg mb-3" required>
-            <option value="">Choose a color...</option>
-            <option value="#000000">Black</option>
-            <option value="#ffffff">White</option>
-            <option value="#374151">Dark Gray</option>
-            <option value="#dc2626">Red</option>
-            <option value="#ea580c">Orange</option>
-            <option value="#ca8a04">Yellow</option>
-            <option value="#16a34a">Green</option>
-            <option value="#2563eb">Blue</option>
-            <option value="#7c3aed">Purple</option>
-            <option value="#ff69b4">Pink</option>
-            <option value="custom">Custom Color</option>
-          </select>
-          <div id="textCustom" class="hidden">
-            <div class="flex items-center space-x-3">
-              <input type="color" id="textPicker" class="w-12 h-12 border rounded-lg" value="#000000" />
-              <input type="text" id="textHex" class="flex-1 px-4 py-3 border rounded-lg" pattern="^#([0-9A-Fa-f]{6})$" placeholder="#000000" />
-            </div>
-          </div>
-        </div>
-        <div>
-          <label for="outlineColor" class="block text-sm font-semibold text-gray-700 mb-2">Text Outline Color</label>
-          <select id="outlineColor" class="w-full px-4 py-3 border border-gray-300 rounded-lg" required>
-            <option value="transparent">None</option>
-            <option value="#000000">Black</option>
-            <option value="#ffffff">White</option>
-            <option value="#374151">Dark Gray</option>
-            <option value="#dc2626">Red</option>
-            <option value="#ea580c">Orange</option>
-            <option value="#ca8a04">Yellow</option>
-            <option value="#16a34a">Green</option>
-            <option value="#2563eb">Blue</option>
-            <option value="#7c3aed">Purple</option>
-            <option value="#ff69b4">Pink</option>
-            <option value="custom">Custom Color</option>
-          </select>
-          <div id="outlineColorCustom" class="hidden mt-3">
-            <div class="flex items-center space-x-3">
-              <input type="color" id="outlinePicker" class="w-12 h-12 border rounded-lg" value="#ffffff" />
-              <input type="text" id="outlineHex" class="flex-1 px-4 py-3 border rounded-lg" pattern="^#([0-9A-Fa-f]{6})$" placeholder="#ffffff" />
-            </div>
-          </div>
-        </div>
-        <div>
-          <label for="fontFamily" class="block text-sm font-semibold text-gray-700 mb-2">Default Font</label>
-          <select id="fontFamily" class="w-full px-4 py-3 border border-gray-300 rounded-lg" required>
-            <option value="Poppins">Poppins</option>
-            <option value="Playfair Display">Playfair Display</option>
-            <option value="Dancing Script">Dancing Script</option>
-            <option value="Montserrat">Montserrat</option>
-            <option value="Great Vibes">Great Vibes</option>
-            <option value="Roboto">Roboto</option>
-            <option value="Lora">Lora</option>
-            <option value="Pacifico">Pacifico</option>
-            <option value="Crimson Text">Crimson Text</option>
-            <option value="Sacramento">Sacramento</option>
-          </select>
         </div>
       </div>
         <div class="flex flex-col items-center order-first md:order-none">
@@ -380,13 +319,6 @@ const els={
   backgroundTheme:document.getElementById('backgroundTheme'),
   backgroundPicker:document.getElementById('backgroundPicker'),
   backgroundHex:document.getElementById('backgroundHex'),
-  textColor:document.getElementById('textColor'),
-  textPicker:document.getElementById('textPicker'),
-  textHex:document.getElementById('textHex'),
-  outlineColor:document.getElementById('outlineColor'),
-  outlinePicker:document.getElementById('outlinePicker'),
-  outlineHex:document.getElementById('outlineHex'),
-  fontFamily:document.getElementById('fontFamily'),
   fontMain:document.getElementById('fontMain'),
   fontSub:document.getElementById('fontSub'),
   fontDate:document.getElementById('fontDate'),
@@ -438,6 +370,9 @@ const backgroundThemes={
   gold:'#ffdf9a',
   white:'#ffffff'
 };
+const DEFAULT_TEXT_COLOR="#000000";
+const DEFAULT_OUTLINE_COLOR="transparent";
+const DEFAULT_FONT="Poppins";
 
 const hexColorRegex=/^#([0-9A-Fa-f]{6})$/;
 
@@ -483,9 +418,9 @@ function updatePreview(){
   clearTimeout(updateTimeout);
   updateTimeout=setTimeout(()=>{
     const bg=getColorValue(els.backgroundTheme,els.backgroundHex,'#f3ddbb');
-    const text=getColorValue(els.textColor,els.textHex,'#000000');
-    const outline=getColorValue(els.outlineColor,els.outlineHex,'transparent');
-    const font=els.fontFamily.value;
+    const text=DEFAULT_TEXT_COLOR;
+    const outline=DEFAULT_OUTLINE_COLOR;
+    const font=DEFAULT_FONT;
     const fontMain=els.fontMain.value||font;
     const fontSub=els.fontSub.value||font;
     const fontDate=els.fontDate.value||font;
@@ -557,7 +492,7 @@ function updatePreview(){
   },100);
 }
 
-['backgroundTheme','backgroundPicker','backgroundHex','textColor','textPicker','textHex','outlineColor','outlinePicker','outlineHex','fontFamily','fontMain','fontSub','fontDate','fontFrom','mainTextColor','mainOutlineColor','mainBold','mainItalic','mainCaps','subTextColor','subOutlineColor','subBold','subItalic','subCaps','dateTextColor','dateOutlineColor','dateBold','dateItalic','dateCaps','fromTextColor','fromOutlineColor','fromBold','fromItalic','fromCaps','mainHeadline','message1','message2','photo','ending'].forEach(id=>{
+['backgroundTheme','backgroundPicker','backgroundHex','fontMain','fontSub','fontDate','fontFrom','mainTextColor','mainOutlineColor','mainBold','mainItalic','mainCaps','subTextColor','subOutlineColor','subBold','subItalic','subCaps','dateTextColor','dateOutlineColor','dateBold','dateItalic','dateCaps','fromTextColor','fromOutlineColor','fromBold','fromItalic','fromCaps','mainHeadline','message1','message2','photo','ending'].forEach(id=>{
   document.getElementById(id).addEventListener('input',updatePreview);
   document.getElementById(id).addEventListener('change',updatePreview);
 });
@@ -566,16 +501,8 @@ els.backgroundTheme.addEventListener('change',e=>{
   toggleCustomColor(els.backgroundTheme,document.getElementById('backgroundCustom'),e.target.value);
   updatePreview();
 });
-els.textColor.addEventListener('change',e=>{
-  toggleCustomColor(els.textColor,document.getElementById('textCustom'),e.target.value);
-  updatePreview();
-});
-els.outlineColor.addEventListener('change',e=>{
-  toggleCustomColor(els.outlineColor,document.getElementById('outlineColorCustom'),e.target.value);
-  updatePreview();
-});
 
-[['backgroundPicker','backgroundHex'],['textPicker','textHex'],['outlinePicker','outlineHex']].forEach(([p,h])=>{
+[['backgroundPicker','backgroundHex']].forEach(([p,h])=>{
   const picker=document.getElementById(p);
   const hex=document.getElementById(h);
   picker.addEventListener('input',e=>{
@@ -616,9 +543,9 @@ document.getElementById('revealForm').addEventListener('submit',async e=>{
   generateBtn.textContent='Generating…';
   const params=new URLSearchParams({
     color:getColorValue(els.backgroundTheme,els.backgroundHex,''),
-    textColor:getColorValue(els.textColor,els.textHex,''),
-    outlineColor:getColorValue(els.outlineColor,els.outlineHex,''),
-    font:els.fontFamily.value,
+    textColor: DEFAULT_TEXT_COLOR,
+    outlineColor: DEFAULT_OUTLINE_COLOR,
+    font: DEFAULT_FONT,
     fontMain:els.fontMain.value,
     fontSub:els.fontSub.value,
     fontDate:els.fontDate.value,
