Change section labels to A/B/C

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Section 1 -->
     <div class="bg-white rounded-2xl shadow-xl p-8" id="section1">
       <div class="flex items-center mb-6">
-        <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">1</div>
+        <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">A</div>
         <h2 class="text-2xl font-bold text-gray-800">Background Color</h2>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -95,7 +95,7 @@
     <!-- Section 2 -->
     <div class="bg-white rounded-2xl shadow-xl p-8" id="section2">
       <div class="flex items-center mb-6">
-        <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">2</div>
+        <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">B</div>
         <h2 class="text-2xl font-bold text-gray-800">Page 1</h2>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
@@ -181,7 +181,7 @@
     <!-- Section 3 -->
     <div class="bg-white rounded-2xl shadow-xl p-8" id="section3">
       <div class="flex items-center mb-6">
-        <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">3</div>
+        <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">C</div>
         <h2 class="text-2xl font-bold text-gray-800">Page 2</h2>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
