Add form-step-question style

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     opacity: 0;
     animation: confetti 700ms ease-out forwards;
   }
+  .form-step-question {
+    margin-bottom: 1rem;
+    font-family: 'Roboto', sans-serif;
+  }
   @keyframes confetti {
     from { transform: translate(0,0); opacity: 1; }
     to { transform: translate(var(--dx), var(--dy)) rotate(720deg); opacity: 0; }
